# vigil

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.cli  MANIFEST.in  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  vigil.example.json
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: actions.yml  cd.yml
docs/: installation.md  metrics.md  notes.md  roadmap.md
sauron/: __init__.py  config.py
sauron/backend/: app.py  run.py  settings.py  sqlite.db  utils.py
sauron/backend/server/: __init__.py  sqlite.db
sauron/cli/: checks.py  checks_util.py  cli.py  cli_util.py  db.py  db_utils.py  server.py
sauron/frontend/: package-lock.json  package.json
sauron/frontend/public/: index.html
sauron/frontend/src/: App.js  App.jsx  context.jsx  data.json  dummyData.js  dummydata.js  index.js
sauron/ingester/: ingester.py
sauron/processor/: __init__.py  base.py  base_backend.py  base_processor.py  community.py  health.py  maintainence.py  p2o.py  popularity.py  retrieve.py  utils.py  vulns.py
sauron/processor/hosts/: github.py
sauron/processor/managers/: npm.py  pypi.py
sauron/processor/metrics/: community.py  maintainence.py  popularity.py
sauron/processor/processors/: community.py  maintainence.py  popularity.py  security.py  vulns.py
scripts/: clean.sh  deploy.sh  env.sh
scripts/control/: clean.sh  rebuild.sh  start_backend.sh  start_frontend.sh  start_sauron.sh
scripts/docker/: clean.sh
scripts/install/: backend.sh  checks.sh  config.sh  frontend.sh  install.sh
tests/: test_cli.py
vigil/: __init__.py  config.py
vigil/backend/: .gitignore  Dockerfile  app.py  constants.py  main.py  pyproject.toml  requirements.txt  settings.py
vigil/backend/server/: __init__.py
vigil/backend/server/api/: auth.py  dashboard.py  errors.py  home.py
vigil/backend/server/commands/: auth.py  dashboard.py
vigil/backend/server/models/: user.py
vigil/cli/: Dockerfile  checks.py  checks_util.py  cli.py  cli_util.py  config.py  constants.py  dashboard.py  db.py  db_utils.py  main.py  pyproject.toml  requirements.txt  setup.cfg
vigil/core/: config.py  constants.py  dashboard.py  db_utils.py  pyproject.toml  requirements.txt
vigil/core/base/: backend.py  processor.py
vigil/core/hosts/: github.py
vigil/core/managers/: npm.py  pypi.py
vigil/core/metrics/: community.py  maintainence.py  popularity.py
vigil/core/processors/: community.py  maintainence.py  popularity.py  security.py
vigil/frontend/: Dockerfile  data.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
vigil/frontend/app/: layout.tsx  page.tsx
vigil/processor/: base_backend.py  base_processor.py
vigil/sauron/: README.md
(+102 files in other folders)
