[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vigil-backend"
version = "0.0.1"
description = "Vigil Backend"
authors = [ "Amal Thundiyil <amal.s.thundiyil@gmail.com>" ]
packages = [
  { include = "*" }
]

[tool.poetry.dependencies]
vigil-cli = "*"
vigil-core = "*"
python = ">=3.7"
flask = "2.2.5"
flask-bcrypt = "1.0.1"
flask-cors = "4.0.0"
flask-migrate = "4.0.4"
flask-sqlalchemy = "3.0.5"

[tool.poetry.dev-dependencies]
black = "23.3.0"
isort = "^5.12.0"
pytest = "7.4.3"

[tool.black]
line-length = 100
target-version = ['py39']
