[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vigil-backend"
version = "0.0.1"
description = "Vigil Backend"
authors = [ "Amal Thundiyil <amal.s.thundiyil@gmail.com>" ]
packages = [
  { include = "*" }
]

[tool.poetry.dependencies]
vigil-core = "*"
python = ">=3.9"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
redis = "^5.0.1"
fastapi = "^0.103.2"
prometheus-fastapi-instrumentator = "^6.1.0"


[tool.poetry.dev-dependencies]
black = "23.3.0"
isort = "^5.12.0"
pytest = "7.4.3"

[tool.black]
line-length = 100
target-version = ['py39']
