[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vigil-cli"
version = "0.0.1"
description = "Vigil CLI"
authors = [ "Amal Thundiyil <amal.s.thundiyil@gmail.com>" ]
packages = [
  { include = "*"},
]

[tool.poetry.scripts]
vigil = "main:cli"

[tool.poetry.dependencies]
vigil-core = "*"
vigil-backend = "*"
python = ">=3.7"
click = "8.1.7"
tabulate = "0.9.0"
pandas = "1.3.5"
rich = "13.5.2"
elasticsearch = "7.17.9"
elasticsearch-dsl = "7.4.1"

[tool.poetry.dev-dependencies]
black = "23.3.0"
isort = "^5.12.0"
pytest = "7.4.3"

[tool.black]
line-length = 100
target-version = ['py39']
