[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vigil-core"
version = "0.0.1"
description = "Vigil Core"
authors = [ "Amal Thundiyil <amal.s.thundiyil@gmail.com>" ]
packages = [
  { include = "*" },
  { include = "base" },
  { include = "hosts" },
  { include = "managers" },
  { include = "metrics" },
  { include = "processors" },
]

[tool.poetry.dependencies]
python = ">=3.7"
numpy = ">=1.21"
pandas = "1.3.5"
pygithub = "1.59.1"
gitpython = "3.1.34"
requests = "2.31.0"
pybraries = "0.4.0"
codeowners ="^0.6.0"
elasticsearch = "7.17.9"
elasticsearch-dsl = "7.4.1"

[tool.poetry.dev-dependencies]
black = "23.3.0"
isort = "^5.12.0"
pytest = "7.4.3"

[tool.black]
line-length = 100
target-version = ['py39']
